# OpenCvSdk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rocky/opencvsdk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeImgproc.cpp  Simple.cpp  bitmap_util.cpp  bitmap_util.h  cv_helper.cpp  native-lib.cpp  native_utils.cpp
app/src/main/cpp/include/opencv2/: core.hpp  imgproc.hpp
app/src/main/cpp/include/opencv2/core/: directx.hpp  persistence.hpp
app/src/main/java/com/rocky/opencv2/: CVType.kt  Imgproc.kt  Mat.kt  Utils.kt
app/src/main/java/com/rocky/opencvsdk/: MainActivity.kt  OpencvUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rocky/opencvsdk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
